--- a/.gitignore
+++ b/.gitignore
@@ -204,6 +204,7 @@ bin
 /build/
 *.exe
 !.paket/paket.bootstrapper.exe
+.idea
 .idea/**/workspace.xml
 .idea/**/tasks.xml
 .idea/**/usage.statistics.xml
